--- a/src/Lists/Lists.scss
+++ b/src/Lists/Lists.scss
@@ -4,6 +4,7 @@
     max-width: 720px;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
+    color: black;
     background-color: $alert-info-background-color;
     border-top: 1px solid;
     border-left: 1px solid;
