--- a/src/Button/Button.scss
+++ b/src/Button/Button.scss
@@ -1,71 +1,119 @@
-@import '../colors.scss';
-
 .btn {
   display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
   padding: 8px 24px;
   border-radius: 6px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  height: 38px;
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+
+  &:hover {
+    box-shadow: 0 0 5px 0 #d3d3d3;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+
+  &-info {
+    border: none;
+    background-color: var(--action-color);
+    &:hover {
+      background-color: var(--info-background);
+    }
+    &-secondary {
+      border: 1px solid;
+      background-color: var(--color-white);
+      color: var(--warning-color);
+    }
+  }
+
+  &-error {
+    border: none;
+    background-color: var(--error-color);
+    color: #ffffff;
+    &-secondary {
+      border: 1px solid;
+      background-color: var(--color-white);
+      color: var(--error-color);
+    }
+  }
+
+  &-warning {
+    border: none;
+    background-color: var(--warning-color);
+    color: #ffffff;
+    &-secondary {
+      border: 1px solid;
+      background-color: var(--color-white);
+      color: var(--warning-color);
+    }
+  }
+
+  &-success {
+    border: none;
+    background-color: var(--success-color);
+    color: #ffffff;
+    &-secondary {
+      border: 1px solid;
+      background-color: var(--color-white);
+      color: var(--success-color);
+    }
+  }
 }
 
-.btn:hover {
-  box-shadow: 0 12px 17px -3px #a6a6a6;
-}
-
-.btn-info {
+.btn-link {
+  background: none;
   border: none;
-  background-color: $info-color
+  color: var(--color-blue-70);
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 0;
+  height: auto;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: none;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+    background: none;
+    color: var(--color-blue-70);
+  }
+
+  &:active {
+    color: var(--color-blue-80);
+  }
+
+  &:disabled,
+  &.btn-disabled {
+    color: #b3c6e6;
+    cursor: not-allowed;
+    text-decoration: none;
+  }
+
+  .icon {
+    margin-right: 0.5rem;
+  }
+  &.right-icon .icon {
+    margin-right: 0;
+    margin-left: 0.5rem;
+  }
+  &.icon-only .icon {
+    margin: 0;
+  }
 }
-
-.btn-info:hover {
-  background-color: #F5AB2B
-}
-
-.btn-info-secondary {
-  border: 1px solid;
-  background-color: white;
-  color: #C75100;
-}
-
-.btn-error {
-  border: none;
-  background-color: $error-color;
-  color: #ffffff;
-}
-
-.btn-error-secondary {
-  border: 1px solid;
-  background-color: white;
-  color: #CC3123;
-}
-
-.btn-error:hover {}
-
-.btn-warning {
-  border: none;
-  background-color: $warning-color;
-  color: #ffffff;
-}
-
-.btn-warning-secondary {
-  border: 1px solid;
-  background-color: white;
-  color: #C75100;
-}
-
-.btn-warning:hover {}
-
-.btn-success {
-  border: none;
-  background-color: $success-color;
-  color: #ffffff;
-}
-
-.btn-success-secondary {
-  border: 1px solid;
-  background-color: white;
-  color: #008700;
-}
-
-.btn-success:hover {}
