--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -1,21 +1,150 @@
-@import '../colors.scss';
-
-.card {
+.lit-card {
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
-  color: black;
-  font-family: "Open Sans", sans-serif;
+  background-color: var(--color-white);
+  box-shadow: var(--box-shadow-s);
+  padding: 24px;
+  border-radius: var(--border-radius-corner-l);
+
+  @media (min-width: 768px) {
+    padding: 24px 32px;
+    border-radius: var(--border-radius-corner-l);
+  }
+
+  @media print {
+    box-shadow: none;
+    padding: 0;
+  }
+
+  &--variant-navigation {
+    cursor: pointer;
+  }
+}
+
+.lit-card__header {
+  display: flex;
+  margin-bottom: 16px;
+
+  &.lit-card__header--no-margin {
+    margin-bottom: 0;
+  }
+
+  .lit-card--variant-summary &,
+  .lit-card--variant-summary-action & {
+    justify-content: space-between;
+  }
+
+  .lit-card--variant-navigation & {
+    justify-content: space-between;
+    margin-bottom: 0;
+  }
+  &:hover {
+    .lit-card__nav-icon {
+      color: var(--color-blue-80);
+    }
+  }
+}
+
+.lit-card__title-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.lit-card__tooltip-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   max-width: 720px;
-  border: 1px solid;
-  background-color: $alert-info-background-color;
-  border-color: $alert-info-color;
+  line-height: 0;
 
+  .lit-card--variant-requirement & {
+    text-align: center;
+  }
+
+  > .lit-tooltip {
+    margin-left: 8px;
+  }
 }
 
-.header {
-  font-weight: bold;
-  margin: 14px 24px;
+.lit-tooltip__icon {
+  margin-left: 8px;
 }
 
-.content {
-  margin: 10px 24px;
+.lit-card__title {
+  overflow-wrap: break-word;
+  line-height: 1.5;
+  margin: 0;
+  margin-right: 8px;
+  font-weight: 600;
+
+  .lit-card__tooltip-title & {
+    display: inline;
+    vertical-align: bottom;
+  }
+}
+
+.lit-card__edit-link {
+  margin-left: 16px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  align-self: flex-start;
+
+  @media print {
+    display: none;
+  }
+}
+
+.lit-card__nav-icon {
+  color: var(--color-blue-70);
+  margin-top: 4px;
+  margin-left: 16px;
+}
+
+.lit-card__action {
+  margin-left: 16px;
+  margin-right: 16px;
+
+  @media print {
+    display: none;
+  }
+}
+
+.lit-card__content {
+  margin-top: 1em;
+
+  &.lit-card__content--no-content {
+    margin-top: 0;
+  }
+}
+
+.lit-card__actions {
+  display: flex;
+  gap: 8px;
+  margin-top: 16px;
+}
+
+.lit-card__subtitle {
+  font-size: 1rem;
+  color: var(--color-cool-grey-80);
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 0;
+}
+
+.lit-card__content--no-content {
+  margin-top: 0;
+}
+
+.lit-card__title,
+.lit-card__subtitle {
+  font-family: "Open Sans", Arial, sans-serif;
+}
+
+.lit-card__line {
+  width: 100%;
+  height: 1px;
+  background: var(--color-cool-grey-20);
+  margin: 24px 0 0 0;
+  border: none;
 }
