Added LitBanner component

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -5,3 +5,19 @@ $success-color: #008700;
 
 $alert-info-color: #2C75DD;
 $alert-info-background-color: #F4FAFF;
+
+
+// Blue
+$color-blue-00: #E5EEFB;
+$color-blue-60: #2A68DA;
+// Green
+$color-green-00: #F8FFF2;
+$color-green-80: #008700;
+// Orange
+$color-orange-05: #FFF0D7;
+$color-orange-80: #FF7300;
+// Red
+$color-red-00: #FEF5F5;
+$color-red-80: #CC3123;
+
+
